# openMVG-pre

./: 使用说明by肖腾.txt
src/: CMakeLists.txt
src/POS/: CMakeLists.txt  drawCameraRC.m  main_ConvertSfM_DataFormat_POS.cpp  main_GlobalSfM_POS.cpp  readpos_preprocess.m
src/baseline/: CMakeLists.txt
src/baseline/Geodesy/: CMakeLists.txt
src/baseline/Localization/: CMakeLists.txt
src/baseline/SfM/: CMakeLists.txt
src/baseline/SfM/clustering/: CMakeLists.txt
src/baseline/SfM/clustering/domSetLibrary/: CMakeLists.txt
src/baseline/SfM/export/: CMakeLists.txt
src/baseline/SfM/import/: CMakeLists.txt
src/gesfm/: CMakeLists.txt  main_ConvertSfM_DataFormat_gesfm.cpp  main_GlobalSfM_gesfm.cpp  main_exportTracksTxt_Normalized.cpp
src/mvg2/: CMakeLists.txt  main_GlobalSfM_IO.cpp  main_MatchesToRelativeInfo_ReS.cpp  main_MatchesToRelativeInfo_V3D.cpp  main_MatchesToRelativeInfo_essential.cpp  main_SfMInit_ImageListing_Unknown.cpp  main_exportTracksTxt.cpp
src/openMVG/sfm/pipelines/: sfm_engine.hpp
src/openMVG/sfm/pipelines/global/: sfm_global_engine_relative_motions.cpp  sfm_global_engine_relative_motions.hpp
src/openMVG/sfm/pipelines/sequential/: sequential_SfM.hpp  sequential_SfM2.hpp
src/robustifyRO/: CMakeLists.txt  main_ComputeMatchesBlackList.cpp  main_ComputeMatchesWhiteList.cpp
src/rpba/: CMakeLists.txt  main_ConvertSfM_DataFormat_bal.cpp
src/software/: CMakeLists.txt
